perf: Optimize build performance

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,12 @@ tsp-solvers = {path = "crates/tsp-solvers"}
 
 [profile.release]
 debug = true
-lto = "thin"
+lto = "off"
+
+[profile.ship]
+inherits = "release"
+debug = false
+lto = "fat"
 
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
