--- a/crates/tsp-rust/Cargo.toml
+++ b/crates/tsp-rust/Cargo.toml
@@ -15,3 +15,4 @@ categories.workspace = true
 [dependencies]
 tsp-core = { workspace = true}
 tsp-parser ={ workspace = true}
+tsp-solvers = { workspace = true}
