--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
 ]
 
 [workspace.dependencies]
+concorde_rs = "0.1.1"
 criterion = { version = "0.7", features = ["html_reports"] }
 memchr = "2.7.6"
 memmap2 = "0.9.9"
@@ -26,6 +27,7 @@ bitvec = "1.0.1"
 tsp-core = {path = "crates/tsp-core"}
 tsp-parser = {path = "crates/tsp-parser"}
 tsp-solvers = {path = "crates/tsp-solvers"}
+
 
 [profile.release]
 debug = true
