feat: Add initial tour for held_karp which also fixes issues with initial upper_bound being used for step size in penalty updates.
Resolves #2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
 [workspace.dependencies]
 concorde_rs = "0.1.1"
 criterion = { version = "0.7", features = ["html_reports"] }
+log = "0.4"
 memchr = "2.7.6"
 memmap2 = "0.9.9"
 thiserror = "2.0.17"
