--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        crate: [tsp-core, tsp-parser, tsp-rust, tsp-solvers]
+        crate: [tsp-core, tsp-parser, tsp-rs, tsp-solvers]
         rust: [stable, beta, nightly]
             
     name: Tests ${{ matrix.crate }} (Rust ${{ matrix.rust }})
