--- a/crates/tsp-rs/Cargo.toml
+++ b/crates/tsp-rs/Cargo.toml
@@ -20,4 +20,4 @@ tsp-solvers = { workspace = true}
 env_logger = "0.11"
 
 [features]
-miri = ["tsp-parser/miri", "tsp-solvers/miri"]
+_miri = ["tsp-parser/_miri", "tsp-solvers/_miri"]
