test: Add parsing tests to parse all tsplib instances and check if anyone of them fails.
Resolves #20

--- a/crates/tsp-parser/Cargo.toml
+++ b/crates/tsp-parser/Cargo.toml
@@ -21,6 +21,7 @@ tsp-core = {workspace = true}
 
 [dev-dependencies]
 criterion = {workspace = true}
+tsp-macros = {workspace = true}
 
 [features]
 _miri = []
