--- a/crates/tsp-parser/Cargo.toml
+++ b/crates/tsp-parser/Cargo.toml
@@ -14,10 +14,12 @@ edition.workspace = true
 authors.workspace = true
 
 [dependencies]
+tsp-core = {workspace = true}
+
+log = {workspace = true}
 memchr = {workspace = true}
 memmap2 = {workspace = true}
 thiserror = {workspace = true}
-tsp-core = {workspace = true}
 
 [dev-dependencies]
 criterion = {workspace = true}
